--- a/package.json
+++ b/package.json
@@ -1,38 +1,35 @@
 {
-  "name": "frointendBuilt",
+  "name": "frontend-build",
   "version": "0.0.1",
-  "description": "An empty canvas holds infinite possibilities.",
-  "main": "index.html",
+  "description": "The frontend build system.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fitgrace/frontend.git"
+  },
   "keywords": [
-    "frointend",
+    "frontend",
     "gulp",
     "webpack"
   ],
-  "author": "FitGrace <fitingrace@gmail.com>",
-  "license": "ISC",
+  "author": "FitGrace <fitingrace@gmail.com> (http://fitgrace.com/)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/fitgrace/frontend/issues"
+  },
+  "homepage": "https://github.com/fitgrace/frontend#readme",
   "devDependencies": {
-    "glob": "^5.0.5",
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.2.0",
+    "glob": "^6.0.1",
+    "gulp": "gulpjs/gulp#4.0",
     "gulp-clean": "^0.3.1",
-    "gulp-concat": "^2.5.2",
-    "gulp-imagemin": "^2.2.1",
-    "gulp-jshint": "^1.10.0",
-    "gulp-livereload": "^3.8.0",
-    "gulp-minify-css": "^1.1.0",
-    "gulp-notify": "^2.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-rev": "^5.0.1",
-    "gulp-rev-collector": "^1.0.0",
-    "gulp-sass": "^1.3.3",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0",
-    "gulp-webpack": "^1.4.0",
-    "html-loader": "^0.3.0",
-    "node-sass": "^2.1.1",
-    "webpack": "^1.8.10"
+    "gulp-imagemin": "^2.4.0",
+    "gulp-minify-css": "^1.2.2",
+    "gulp-sass": "^2.1.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
+    "webpack": "^1.12.9",
+    "webpack-stream": "^2.3.0"
   }
 }
